crates/wolf_mem/tests/snapshots/mem_diagnostics__e1014_projected_write.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1014]: `p.x` is `read` for the whole call, so it cannot be assigned through
 --> mem:///main.lu:3:5
  |
2 | fn poke(p: P) -> int {
  |         - `p` is declared without a mode — that spells `read`, immutable for the call
3 |     p.x = 7
  |     ^^^ write through a `read` parameter
  |
  = note: a `read` parameter is the caller's value, lent immutably [mem.tier0.mode.read]. Declare
    it `mut` if this function's purpose is to change it (call sites then spell the
    mutation), `take` it if the function consumes it, or mutate this function's own `copy`.
