crates/wolf_mem/tests/snapshots/mem_diagnostics__e1014_whole_and_compound.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1014]: `p` is `read` for the whole call, so it cannot be assigned
 --> mem:///main.lu:3:5
  |
2 | fn wipe(p: P) -> int {
  |         - `p` is declared without a mode — that spells `read`, immutable for the call
3 |     p = P { x: 0, y: 0 }
  |     ^ write through a `read` parameter
  |
  = note: a `read` parameter is the caller's value, lent immutably [mem.tier0.mode.read]. Declare
    it `mut` if this function's purpose is to change it (call sites then spell the
    mutation), `take` it if the function consumes it, or mutate this function's own `copy`.

error[E1014]: `p.y` is `read` for the whole call, so it cannot be modified
 --> mem:///main.lu:4:5
  |
2 | fn wipe(p: P) -> int {
  |         - `p` is declared without a mode — that spells `read`, immutable for the call
3 |     p = P { x: 0, y: 0 }
4 |     p.y += 1
  |     ^^^ write through a `read` parameter
  |
  = note: a `read` parameter is the caller's value, lent immutably [mem.tier0.mode.read]. Declare
    it `mut` if this function's purpose is to change it (call sites then spell the
    mutation), `take` it if the function consumes it, or mutate this function's own `copy`.
