crates/wolf_mem/tests/snapshots/mem_diagnostics__e1015_lent_view_relent.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1015]: these bytes are LENT to `relay` for the call, but `relay` keeps them past it
 --> mem:///main.lu:5:11
  |
2 | fn relay(bs: List[int]) -> List[int] { keep(bs) }
  |          -- `bs` is declared here
  |                                             -- `bs` outlives the call here
...
5 |     relay(s.bytes()).len - 4
  |           ^^^^^^^^^ a byte view of the string's own storage, not a copy
  |
  = note: bind the bytes first — `let bs = s.bytes()` materializes a `List[int]` the callee may
    own, and passing `bs` costs exactly what it cost before views crossed calls. A LENT view
    costs nothing and lasts only for the call.
