crates/wolf_mem/tests/snapshots/mem_diagnostics__e1301_prov_outside.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1301]: the provenance op `addr` needs an `unsafe` block
 --> mem:///main.lu:5:13
  |
5 |     let a = p.addr() as int
  |             ^^^^^^^^ raw-tier operation in safe code
  |
  = note: raw pointers are inert data anywhere — only the tier's operations need the ring. Wrap
    this in `unsafe { }` and state the invariant in a `# Safety:` comment; the rules inside
    are simpler than the safe tier's, not stricter.
